Add registration and auth using jwt tokens
